--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cool Landing Page</title>
+    <title>Home</title>
     <link rel="stylesheet" href="index.css">
 </head>
     <body>
         <div class="wrapper">
-          <h1>Bubbles Animation</h1>
+          <h1>My Page</h1>
           <div><span class="dot"></span></div>
           <div><span class="dot"></span></div>
           <div><span class="dot"></span></div>
