--- a/index.html
+++ b/index.html
@@ -3,28 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Cool Landing Page</title>
     <link rel="stylesheet" href="index.css">
 </head>
-    <body>
-        <div class="wrapper">
-          <h1>My Page</h1>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
-          <div><span class="dot"></span></div>
+<body>
+    <div class="top-bar">
+        <div class="name">Jake Schouten</div>
+        <div class="nav-links">
+            <a href="projects.html">Projects</a>
+            <a href="aboutme.html">About Me</a>
+            <a href="links.html">Links</a>
         </div>
-      </body>
-    
+    </div>
+    <div class="wrapper">
+        <h1>Welcome to my site</h1>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+        <div><span class="dot"></span></div>
+    </div>
+</body>
 </html>
