--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="top-bar">
         <div class="name">Jake Schouten</div>
         <div class="nav-links">
-            <a href="projects.html">Projects</a>
+            <a href="projects.html" id="projects-link">Projects</a>
             <a href="aboutme.html">About Me</a>
             <a href="links.html">Links</a>
         </div>
     </div>
     <div class="wrapper">
-        <h1>Welcome to my site</h1>
+        <h1>Welcome to my page</h1>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
