Formatting and adding changes to the typed message

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div class="wrapper">
-        <h1>Welcome to my page</h1>
+        <h1><span id="typing"></span><span class="cursor"></span></h1>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
@@ -33,5 +33,6 @@
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
