--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <div class="top-bar">
         <div class="name">Jake Schouten</div>
         <div class="nav-links">
-            <a href="projects.html" id="projects-link">Projects</a>
+            <a href="index.html">Home</a>
             <a href="aboutme.html">About Me</a>
             <a href="links.html">Links</a>
         </div>
