Added two Projects to my portfolio

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cool Landing Page</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="projects.css">
 </head>
 <body>
@@ -16,16 +16,15 @@
         </div>
     </div>
     <div class="wrapper">
-        <h1>This are my projects</h1>
-
-        <!-- Project One -->
-        <h2 id = "project"> Sudoku Solver</h2>
-        <p id = "description"><a href="links.html">Github</a><br>Discribe the Project</p>
-      
-        <!-- Project Two -->
-        <h2 id = "project"> Sudoku Solver</h2>
-        <p id = "description"><a href="links.html">Github</a><br>Discribe the Project</p>
-        
+        <h1 id = "head">Projects</h1>
+        <p id = "project1"> Facial and Eye Tracking-Based Cheating Detection System 
+            <br> <a href="https://github.com/Sch-Jake/Facial-Tracking-System" target="_blank">Github</a>
+            <br> Developed a cheating recognition program using facial recognition and eye-tracking technologies to ensure the integrity of online exams. The software tracks faces and pupils in real-time, offering look-away detection, real-time monitoring, and detailed behavior analysis.
+        </p>
+        <p id = "project2">  Bank Fraud Detection Software
+            <br> <a href="https://github.com/Sch-Jake/Bank-Fraud-Detection" target="_blank">Github</a>
+            <br> Developed a Python-based bank fraud detection system utilizing object-oriented principles. This project aims to replicate real life fraud detection by  monitoring transactions in real-time, analyzing account history, and using statistical techniques to identify and flag suspicious activities, ensuring fraud prevention.
+        </p>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
