Added Project Three

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,10 @@
             <br> <a href="https://github.com/Sch-Jake/Bank-Fraud-Detection" target="_blank">Github</a>
             <br> Developed a Python-based bank fraud detection system utilizing object-oriented principles. This project aims to replicate real life fraud detection by  monitoring transactions in real-time, analyzing account history, and using statistical techniques to identify and flag suspicious activities, ensuring fraud prevention.
         </p>
+        <p id = "project3">  Web Bases Black Jack
+            <br> <a href="https://github.com/Sch-Jake/Web-Blackjack" target="_blank">Github</a>
+            <br> Developed a full-stack Blackjack game using HTML, CSS, and JavaScript for the front end and JavaScript (Node.js) for the back end. The application was deployed using Express and utilized MySQL for user data. The project involved implementing user authentication and game logic to replicate the game online.
+        </p>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
