Added Project number four

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,10 @@
             <br> <a href="https://github.com/Sch-Jake/Web-Blackjack" target="_blank">Github</a>
             <br> Developed a full-stack Blackjack game using HTML, CSS, and JavaScript for the front end and JavaScript (Node.js) for the back end. The application was deployed using Express and utilized MySQL for user data. The project involved implementing user authentication and game logic to replicate the game online.
         </p>
+        <p id = "project4">  Sudoku Solver
+            <br> <a href="https://github.com/Sch-Jake/Web-Blackjack" target="_blank">Github</a>
+            <br> Developed an algorithmic Sudoku solver that fills in missing numbers, ensuring each row, column, and subgrid contains all digits from 1 to 9. Utilized backtracking and constraint propagation techniques for efficient puzzle solving.
+        </p>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
