Added an about me section

--- a/aboutme.html
+++ b/aboutme.html
@@ -19,9 +19,11 @@
     <div class="wrapper">
         <h1 id = "head">About Me</h1>
         <p id = "info"> 
-            Hello, My name is Jake Schouten. I am a recent graduate from Augsburg University with a Bachelors of Science in Computer Science
-            
-     </p>
+            Please feel free to reach out to me via email Jake.schouten19@gmail.com or by phone (651)318-8195<br><br>
+            Hello, My name is Jake Schouten. I am a recent graduate from Augsburg University with a Bachelors of Science in Computer Science.
+            I ended with a 3.5 GPA and I am excited to get out in the real world and make a difference through software.
+            <br>I enjoy camping, golfing, running, and walking my dogs.
+        </p>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
         <div><span class="dot"></span></div>
