--- a/aboutme.html
+++ b/aboutme.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <div class="top-bar">
-        <div class="name">Jake Schouten</div>
+        <div class="name">Jake Schouten
+            <a href="https://www.linkedin.com/in/jakeschouten" target="_blank">Linkedin</a>
+            <a href="https://github.com/Sch-Jake" target="_blank">Github</a>
+        </div>
         <div class="nav-links">
             <a href="projects.html" id="projects-link">Projects</a>
             <a href="index.html">Home</a>
-            <a href="links.html">Links</a>
         </div>
     </div>
 
