--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div class="top-bar">
-        <div class="name">Jake Schouten</div>
+        <div class="name">Jake Schouten
+            <a href="https://www.linkedin.com/in/jakeschouten" target="_blank">Linkedin</a>
+            <a href="https://github.com/Sch-Jake" target="_blank">Github</a>
+        </div>
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="aboutme.html">About Me</a>
