--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cool Landing Page</title>
+    <title>Home</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="top-bar">
-        <div class="name">Jake Schouten</div>
+        <div class="name">Jake Schouten
+            <a href="https://www.linkedin.com/in/jakeschouten" target="_blank">Linkedin</a>
+            <a href="https://github.com/Sch-Jake" target="_blank">Github</a>
+        </div>
         <div class="nav-links">
             <a href="projects.html" id="projects-link">Projects</a>
             <a href="aboutme.html">About Me</a>
